--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.18.0",
-    "validator": "^13.11.0",
-    "yup": "^1.3.2"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
